добавил ссылки на большие файлы

--- a/command/Anasenkov/readme
+++ b/command/Anasenkov/readme
@@ -1,1 +1,9 @@
 Treez.zip - маленький датасет по отдельному дереву
+
+
+https://disk.yandex.ru/d/jr7H5yJ5MTCW5g
+work_pc2019_ID.csv- файл почищенный
+
+
+https://disk.yandex.ru/d/ZhRy24UoL5OzZQ
+pc2019_ID.csv - файл выданный R скриптом
